--- a/PMS-PropertyHapa.Staff/Views/LateFee/Settings.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/LateFee/Settings.cshtml
@@ -7,7 +7,7 @@
             <div class="page-title">
                 <div class="row">
                     <div class="col-12 col-sm-6">
-                        <h3>Reports</h3>
+                        <h3>Settings</h3>
                     </div>
                     <div class="col-12 col-sm-6">
                         <ol class="breadcrumb">
