--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -210,7 +210,7 @@
                                     <a href="index.html"><img class="img-fluid" src="~/Dashboard/assets/images/logo-icon.png" alt=""></a>
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true">        </i></div>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="homeSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Home")">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
@@ -222,7 +222,7 @@
                                         </svg><span>Dashboard</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="landlordSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Landlord")">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
@@ -237,77 +237,74 @@
                                     </a>
                                 </li>
 
-                                <li class="sidebar-list">
+                                <li id="assestsSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Assests")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg><span>Assets</span>
                                     </a>
                                 </li>
 
 
-                                <li class="sidebar-list">
+                                <li id="tenantSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Tenant")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg><span>Tenant</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="applicationsSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("ViewApplication","Applications")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Applications</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-link">
+                                <li id="leaseSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Lease")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-clipboard"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg><span>Lease</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="maintenanceSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Maintenance")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg><span>Maintance</span>
                                     </a>
                                 </li>
-
-
-
-                                <li class="sidebar-link">
+                                <li id="vendorSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Vendor")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                                         <span> Vendor</span>
                                     </a>
                                 </li>
 
-                                <li class="sidebar-list">
+                                <li id="accountingSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Accounting")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg><span>Accounting</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-link">
+                                <li id="taskSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("ViewTask","Task")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Task</span>
                                     </a>
                                 </li>
 
-                                <li class="sidebar-link">
+                                <li id="communicationSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Communication")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
                                         <span> Communication</span>
                                     </a>
                                 </li>
 
-                                <li class="sidebar-link">
+                                <li id="calendarSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Calendar")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg><span>Calendar</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-link">
+                                <li id="reportsSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Reports")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg><span> Reports</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-link">
+                                <li id="documentSideBar" class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Documents","Documents")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg><span>Documents</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="integrationSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="#">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span> Integration</span>
                                     </a>
@@ -316,17 +313,17 @@
                                         <li><a href="@Url.Action("QuickBookIntegration","Services")">QuickBook Integration</a></li>
                                     </ul>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="supportCenterSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","SupportCenter")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Support Center</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="lateFeeSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Settings","LateFee")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Settings</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
+                                <li id="subscriptionsSideBar" class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Subscriptions")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Subscription</span>
                                     </a>
@@ -558,7 +555,31 @@
 
     <script>
         $(document).ready(function () {
-
+                $.ajax({
+                url: '/Home/GetUserRoles',
+                    type: 'GET',
+                    success: function (response) {
+                        console.log("response")
+                        console.log(response)
+                        if (response.IsTrial) {
+                            $("#assestsSideBar").css("display", "none");
+                            $("#applicationsSideBar").css("display", "none");
+                            $("#vendorSideBar").css("display", "none");
+                            $("#accountingSideBar").css("display", "none");
+                            $("#taskSideBar").css("display", "none");
+                            $("#calendarSideBar").css("display", "none");
+                            $("#reportsSideBar").css("display", "none");
+                            $("#integrationSideBar").css("display", "none");
+                            $("#supportCenterSideBar").css("display", "none");
+                            $("#lateFeeSideBar").css("display", "none");
+                            $("#subscriptionsSideBar").css("display", "none");
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Error fetching roles:', error);
+                    }
+                });
+            
             function openModal() {
                 $('#exampleModalCenter').modal('show');
             }
