--- a/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
@@ -180,130 +180,249 @@
                 <h5 class="modal-title" id="stripeModalLabel">Checkout</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form id="payment-form">
-                <p class="d-none" id="product-Id"></p>
-                <label for="name">Name</label>
-                <input id="name" placeholder="Jenny Rosen" value="Jenny Rosen" required />
+            <form id="payment-form" class="p-3">
+                <div class="mb-3">
+                    <p class="d-none" id="product-Id"></p>
+                    <label for="name" class="form-label">Name</label>
+                    <input id="name" class="form-control" placeholder="Enter Name" required />
+                </div>
+                
 
-                <label for="card-element">Card</label>
-                <div id="card-element"></div> <!-- Stripe Element will be mounted here -->
-                <div id="card-errors" role="alert"></div> <!-- Display errors -->
+                 <div class="mb-3">
+                    <label for="card-element" class="form-label">Card</label>
+                    <div id="card-element" class="form-control"></div> <!-- Stripe Element will be mounted here -->
+                    <div id="card-errors" class="text-danger mt-2" role="alert"></div> <!-- Display errors -->
+                </div>
 
-                <div id="product-details">
-                    <h6 id="product-title"></h6>
-                    <p id="product-description"></p>
-                    <div id="price-section">
-                        <img id="price-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Price Image" />
-                        <p class="d-none" id="product-price"></p>
-                        <p id="product-priceText"></p>
+                <div id="product-details" class="mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4 id="product-title"></h4>
+                            <p id="product-description"></p>
+                        </div>
+                        <div class="col-md-6 text-md-right">
+                            <p class="d-none" id="product-price"></p>
+                            <h4 id="product-priceText" class="mb-0"></h4>
+                        </div>
+                    </div>
+                    <div id="price-section" class="d-flex justify-content-center">
+                        <img id="price-image" class="me-4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Price Image" style="width: 50%; height: 50%;" />
                     </div>
                 </div>
 
-                <button id="submit">Pay</button>
+                <div class="d-flex justify-content-end">
+                    <button class="btn btn-primary" id="submit">Pay</button>
+                </div>
+                
             </form>
 
             <div id="messages" role="alert" style="display: none;"></div>
         </div>
     </div>
-</div>
+</div> 
+
+@* <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="stripeModalLabel">Checkout</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="payment-form" class="p-3">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input id="name" class="form-control" placeholder="Jenny Rosen" value="Jenny Rosen" required />
+                </div>
+
+                <div class="mb-3">
+                    <label for="card-element" class="form-label">Card</label>
+                    <div id="card-element" class="form-control"></div> <!-- Stripe Element will be mounted here -->
+                    <div id="card-errors" class="text-danger mt-2" role="alert"></div> <!-- Display errors -->
+                </div>
+
+                <div id="product-details" class="mb-3">
+                    <h6 id="product-title"></h6>
+                    <p id="product-description"></p>
+                    <div id="price-section" class="d-flex align-items-center">
+                        <img id="price-image" class="me-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Price Image" style="width: 50px; height: 50px;" />
+                        <div>
+                            <p class="d-none" id="product-price"></p>
+                            <p id="product-priceText" class="mb-0"></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary" id="submit">Pay</button>
+                </div>
+            </form>
+
+            <div id="messages" role="alert" style="display: none;" class="alert alert-danger mt-3"></div>
+        </div>
+    </div>
+</div> *@
+
+
 
 
 <script src="https://js.stripe.com/v3/"></script>
 <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const stripe = Stripe('pk_test_51PATV6AezidaMUD1niwSxJ42oxgtI2vZLXEQo8lEMybnjmzaLF3JRV099zwzJ6HWb4cWVzqlvJSaLP7IiMn8YuXM00cA7HPhEH');
+    let updatedPrice = 0;
+    document.addEventListener('DOMContentLoaded', async () => {
+        const stripe = Stripe('pk_test_51PATV6AezidaMUD1niwSxJ42oxgtI2vZLXEQo8lEMybnjmzaLF3JRV099zwzJ6HWb4cWVzqlvJSaLP7IiMn8YuXM00cA7HPhEH');
+        const elements = stripe.elements();
+        const cardElement = document.getElementById('card-element');
+        const card = elements.create('card');
 
-            const elements = stripe.elements();
-            const cardElement = document.getElementById('card-element');
-            const card = elements.create('card');
+        if (cardElement) {
+            card.mount(cardElement); // Mount the Card Element
+        } else {
+            console.error('Card Element container not found.');
+        }
 
-            if (cardElement) {
-                card.mount(cardElement); // Mount the Card Element
-            } else {
-                console.error('Card Element container not found.');
-            }
+        let submitted = false;
 
-            let submitted = false;
+        $('#payment-form').on('submit', async function (event) {
+            event.preventDefault();
 
-            $('#payment-form').on('submit', async function (event) {
-                event.preventDefault();
+            if (submitted) return;
+            submitted = true;
+            $(this).find('button').prop('disabled', true);
 
-                if (submitted) return;
-                submitted = true;
-                $(this).find('button').prop('disabled', true);
+            const id = $('#product-Id').text();
+            const nameInput = $('#name').val();
+            const title = $('#product-title').text();
+            const description = $('#product-description').text();
+            //const price = parseFloat($('#product-price').text());
 
-                const id = $('#product-Id').text();
-                const nameInput = $('#name').val();
-                const title = $('#product-title').text();
-                const description = $('#product-description').text();
-                const price = parseFloat($('#product-price').text());
+            const formData = {
+                Id: id,
+                Title: title,
+                Description: description,
+                Price: updatedPrice,
+                Name: nameInput,
+                IsYearly: $("#planSelection").is(":checked"),
+                IsTrial: title == "Free" ? true : false
+            };
 
-                const formData = {
-                    Id: id,
-                    Title: title,
-                    Description: description,
-                    Price: price,
-                    Name: nameInput
-                };
-
-                try {
+            try {
                 const response = await fetch('/Subscriptions/SavePayment', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(formData),
+                });
+                const checkoutOrder = await response.json();
+
+                const { error, setupIntent } = await stripe.confirmCardSetup(
+                    checkoutOrder.ClientSecret,
+                    {
+                        payment_method: {
+                            card: card,
+                            billing_details: {
+                                name: nameInput,
+                            },
+                        },
+                    }
+                );
+
+                if (error) {
+                    console.error(error.message);
+                } else {
+                    console.log('Setup successful! Creating subscription...');
+
+                    const subscriptionResponse = await fetch('/Subscriptions/CreateSubscription', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify(formData),
-                    });
-                    const checkoutOrder = await response.json();
-
-                    const { error, setupIntent } = await stripe.confirmCardSetup(
-                        checkoutOrder.ClientSecret,
-                        {
-                            payment_method: {
-                                card: card,
-                                billing_details: {
-                                    name: nameInput,
-                                },
-                            },
-                        }
-                    );
-
-                    if (error) {
-                        console.error(error.message);
-                    } else {
-                        console.log('Setup successful! Creating subscription...');
-
-                        const subscriptionResponse = await fetch('/Subscriptions/CreateSubscription', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({
-                                customerId: checkoutOrder.CustomerId,
-                                priceId: checkoutOrder.PriceId,
+                        body: JSON.stringify({
+                            customerId: checkoutOrder.CustomerId,
+                            priceId: checkoutOrder.PriceId,
                             paymentMethodId: setupIntent.payment_method,
-                            }),
-                        });
+                        }),
+                    });
 
-                        const subscriptionResult = await subscriptionResponse.json();
-                        if (subscriptionResult.error) {
-                            console.error('Subscription creation failed:', subscriptionResult.error);
-                        } else {
-                            console.log('Subscription created successfully!');
-                        }
+                    const subscriptionResult = await subscriptionResponse.json();
+                    if (subscriptionResult.error) {
+                        console.error('Subscription creation failed:', subscriptionResult.error);
+                    } else {
+                        console.log('Subscription created successfully!');
+                        location.reload();
                     }
-                } catch (error) {
-                    console.error('Backend Error:', error);
-                    alert('An error occurred while processing your subscription.');
-                } finally {
-                    $('#submit').prop('disabled', false);
-                    submitted = false;
                 }
-            });
+            } catch (error) {
+                console.error('Backend Error:', error);
+                alert('An error occurred while processing your subscription.');
+                $('#stripeModal').modal('hide');
+            } finally {
+                $('#submit').prop('disabled', false);
+                submitted = false;
+            }
         });
-    $(document).ready(function () {
-        loadSubscriptions();
     });
+
+    $(document).ready(function () {
+        $('#planSelection').change(function () {
+            if ($(this).prop('checked')) {
+                $('#monthly-container').addClass('d-none');
+                $('#yearly-container').removeClass('d-none');
+            } else {
+                $('#monthly-container').removeClass('d-none');
+                $('#yearly-container').addClass('d-none');
+            }
+        });
+
+        loadSubscriptions();
+
+        $("#unitsFinal").on("input", function () {
+            handleUnitsChange();
+        });
+    });
+
+    function handleUnitsChange() {
+        const units = $('#unitsFinal').val();
+        $('.pricing-block').each(function () {
+            const priceElement = $(this).find('.price-box h4');
+            const basePrice = parseFloat(priceElement.data('basePrice'));
+            let newPrice = basePrice * units;
+
+            const subscriptionName = $(this).find('h2').text().trim();
+            if (subscriptionName === 'Basic') {
+                newPrice *= 1;
+            } else if (subscriptionName === 'Plus') {
+                newPrice *= 0.75;
+            } else if (subscriptionName === 'Premium') {
+                newPrice *= 0.5;
+            }
+
+            priceElement.text('$' + newPrice.toFixed(2));
+
+            const unitsElement = $(this).find('.unitsBlock');
+            unitsElement.text(units);
+        });
+
+        updateModalPrice(units);
+    }
+
+    function updateModalPrice(units) {
+        const modalPriceElement = $('#product-priceText');
+        const basePrice = parseFloat($('#product-price').text());
+        const subscriptionName = $('#product-title').text().trim();
+        let newPrice = basePrice * units;
+
+        if (subscriptionName === 'Basic') {
+            newPrice *= 1;
+        } else if (subscriptionName === 'Plus') {
+            newPrice *= 0.75;
+        } else if (subscriptionName === 'Premium') {
+            newPrice *= 0.5;
+        }
+
+        updatedPrice = newPrice; 
+        modalPriceElement.text('Price: $' + newPrice.toFixed(2));
+    }
 
     function loadSubscriptions() {
         $.ajax({
@@ -335,43 +454,47 @@
 
     function createSubscriptionBlock(subscription) {
         return `
-                    <div class="col-auto">
-                        <div class="pricing-block card text-center">
-                            <div class="pricing-header">
-                                <h2>${subscription.SubscriptionName}</h2>
-                                <div class="price-box">
-                                    <div>
-                                        <h4 class="text-white" data-base-price="${subscription.Price.toFixed(2)}">$${subscription.Price.toFixed(2)} ${subscription.Currency}</h4>
-                                        <p>/ ${subscription.SubscriptionType}</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pricing-list">
-                                <ul class="pricing-inner">
-                                    <li>
-                                        <h6><span class="unitsBlock">${subscription.NoOfUnits}</span> Units</h6>
-                                    </li>
-                                    <li>
-                                        <h6>${subscription.SmallDescription}</h6>
-                                    </li>
-                                    <li>
-                                        <h6>${subscription.Tax}%<span> Tax</span></h6>
-                                    </li>
-                                </ul>
-                                <button class="btn btn-primary btn-lg" onclick="handleSubscriptionClick(${subscription.Price}, '${subscription.Id}', '${subscription.SubscriptionName}')" type="button">Subscribe</button>
+            <div class="col-auto">
+                <div class="pricing-block card text-center">
+                    <div class="pricing-header">
+                        <h2>${subscription.SubscriptionName}</h2>
+                        <div class="price-box">
+                            <div>
+                                <h4 class="text-white" data-base-price="${subscription.Price.toFixed(2)}">$${subscription.Price.toFixed(2)} ${subscription.Currency}</h4>
+                                <p>/ ${subscription.SubscriptionType}</p>
                             </div>
                         </div>
-                    </div>`;
+                    </div>
+                    <div class="pricing-list">
+                        <ul class="pricing-inner">
+                            <li>
+                                <h6><span class="unitsBlock">${subscription.NoOfUnits}</span> Units</h6>
+                            </li>
+                            <li>
+                                <h6>${subscription.SmallDescription}</h6>
+                            </li>
+                            ${subscription.SubscriptionType === 'Yearly' ? '<li><h6>10% discount</h6></li>' : ''}
+                            <li>
+                                <h6>${subscription.Tax}%<span> Tax</span></h6>
+                            </li>
+                        </ul>
+                        <button class="btn btn-primary btn-lg" onclick="handleSubscriptionClick(${subscription.Price.toFixed(2)}, '${subscription.Id}', '${subscription.SubscriptionName}')" type="button">Subscribe</button>
+                    </div>
+                </div>
+            </div>`;
     }
 
     function handleSubscriptionClick(price, id, name) {
         $('#product-Id').text(id);
         $('#product-title').text(name);
-        $('#product-description').text(name);
+        $('#product-description').text($("#unitsFinal").val() + " Units");
         $('#product-price').text(price);
         $('#product-priceText').text(`Price: $${price.toFixed(2)}`);
 
         $("#stripeModal").modal("show");
+
+        const units = $('#unitsFinal').val();
+        updateModalPrice(units);
     }
 
 </script>
