--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true">        </i></div>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Dashboard")">
+                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Home")">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
