lead graph fixed

--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -528,6 +528,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -617,35 +618,7 @@
             ]
         });
 
-        // Leads Chart
-        var data = new google.visualization.DataTable();
-        data.addColumn('number', 'month');
-        data.addColumn('number', 'Open Leads');
-        data.addColumn('number', 'Closed Leads');
-        data.addRows([
-            [1, 37.8, 60.8],
-            [2, 30.9, 10.5],
-            [3, 40.4, 57],
-            [4, 11.7, 18.8],
-            [5, 20, 17.6],
-            [6, 8.8, 13.6],
-            [7, 7.6, 12.3],
-            [8, 12.3, 29.2],
-            [9, 16.9, 42.9],
-            [10, 12.8, 30.9],
-            [11, 5.3, 7.9],
-            [12, 6.6, 8.4],
-        ]);
-        var options = {
-            chart: {
-                   
-            },
-            colors: [zetaAdminConfig.primary, zetaAdminConfig.secondary, "#51bb25"],
-            height: 300,
-            width: '100%',
-        };
-        var chart = new google.charts.Line(document.getElementById('newLeadsChart'));
-        chart.draw(data, google.charts.Line.convertOptions(options));
+        loadLeadChart();
 
         // Outstanding Payments Pie Chart
         var options8 = {
@@ -731,7 +704,44 @@
         });
     }
 
-    
+    function loadLeadChart() {
+        alert()
+        google.charts.load('current', { 'packages': ['corechart', 'line'] });
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = new google.visualization.DataTable();
+            data.addColumn('number', 'Month');
+            data.addColumn('number', 'Open Leads');
+            data.addColumn('number', 'Closed Leads');
+            data.addRows([
+                [1, 37.8, 60.8],
+                [2, 30.9, 10.5],
+                [3, 40.4, 57],
+                [4, 11.7, 18.8],
+                [5, 20, 17.6],
+                [6, 8.8, 13.6],
+                [7, 7.6, 12.3],
+                [8, 12.3, 29.2],
+                [9, 16.9, 42.9],
+                [10, 12.8, 30.9],
+                [11, 5.3, 7.9],
+                [12, 6.6, 8.4]
+            ]);
+
+            var options = {
+                chart: {
+                    title: 'Leads'
+                },
+                colors: [zetaAdminConfig.primary, zetaAdminConfig.secondary, "#51bb25"],
+                height: 300,
+                width: '100%'
+            };
+
+            var chart = new google.visualization.LineChart(document.getElementById('newLeadsChart'));
+            chart.draw(data, options);
+        }
+    }
 
 </script>
 
