--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -225,25 +225,25 @@
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("PaidPayments","Payments")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg><span>Payments</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
+                                    @* <ul class="sidebar-submenu">
                                         <li><a href="@Url.Action("PaidPayments","Payments")">View Paid Payments</a></li>
                                         <li><a href="@Url.Action("DuePayments","Payments")">View Due Payments</a></li>
                                         <li><a href="@Url.Action("UnPiadPayments","Payments")">View UnPiad Payments</a></li>
-                                    </ul>
+                                    </ul> *@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("PaidInvoices","Invoice")">
                                         <svg b-ab5quygad7="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path b-ab5quygad7="" d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline b-ab5quygad7="" points="13 2 13 9 20 9"></polyline></svg><span>Invoice</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
+                                    @* <ul class="sidebar-submenu">
                                         <li><a href="@Url.Action("PaidInvoices","Invoice")">View Paid Invoices</a></li>
                                         <li><a href="@Url.Action("DueInvoices","Invoice")">View Due Invoices</a></li>
                                         <li><a href="@Url.Action("UnInvoices","Invoice")">View UnPiad Invoices</a></li>
-                                    </ul>
+                                    </ul> *@
                                 </li>
 
                                 <li class="sidebar-list">
